# PadPilot

./: .gitignore  CMakeLists.txt  Download-PadPilot.cmd  GAMECONTROLLERDB_LICENSE.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
downloads/: PadPilot_v1_0_Portable.zip.b64.001  PadPilot_v1_0_Portable.zip.b64.002  PadPilot_v1_0_Portable.zip.b64.003  PadPilot_v1_0_Portable.zip.b64.004
src/: app.manifest  app.rc  core.hpp  main.cpp  tests.cpp
